--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -14,7 +14,9 @@
         <button class="button" type="button" id="task2">Задание 2</button>
         <button class="button" type="button" id="task3">Задание 3</button>
         <button class="button" type="button" id="task4">Задание 4</button>
+        <button class="button" type="button" onclick=start()>Игра</button>
     </div>
     <script src="index.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
