--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -13,9 +13,9 @@
         <button class="button" type="button" id="task1">Задание 1</button>
         <button class="button" type="button" id="task2">Задание 2</button>
         <button class="button" type="button" id="task3">Задание 3</button>
-        <button class="button" type="button" id="task4">Задание 4</button>        
     </div>
     <script src="index.js"></script>
     <script src="game.js"></script>
+    <script src="millionaire.js"></script>
 </body>
 </html>
